colours and fonts.

--- a/data/company.yml
+++ b/data/company.yml
@@ -1,6 +1,6 @@
 ---
 company:
-    name: "iWeb"
+    name: "OHSL"
     vat-number: "670 1335 61"
     company-number: "3980207"
     address: "10 Parker Court, Dyson Way, Staffordshire Technology Park, Stafford. ST18 0WP."
