Brand/button progress.

--- a/data/company.yml
+++ b/data/company.yml
@@ -1,12 +1,12 @@
 ---
 company:
     name: "OHSL"
-    vat-number: "670 1335 61"
-    company-number: "3980207"
-    address: "10 Parker Court, Dyson Way, Staffordshire Technology Park, Stafford. ST18 0WP."
-    telephone: "01785 876469"
-    email: "hello@iweb.co.uk"
-    copyright: "©iWeb is a trading name of Interactive Web Solutions Ltd. 1995 - 2016."
+    vat-number: "GB 987595633"
+    company-number: "07070447"
+    address: "2 Hayes Road, Nuneaton, Warwickshire. CV10 0NH."
+    telephone: "02476 992 791"
+    email: "mail@ohsl.co.uk"
+    copyright: "© Occupational Hygiene Solutions Ltd. 2009 - 2017."
 
-    twitter-handle: "@iwebtweets"
-    twitter-url: "https://twitter.com/iwebtweets"
+    twitter-handle: "@hygienists"
+    twitter-url: "https://twitter.com/hygienists"
