--- a/data/first-name.yml
+++ b/data/first-name.yml
@@ -1,16 +1,5 @@
 ---
 first-name:
-    - "Jake"
+    - "Helen"
     - "Gareth"
-    - "David"
     - "Andrew"
-    - "Jon"
-    - "Bas"
-    - "Philip"
-    - "Chloe"
-    - "Laura"
-    - "Darren"
-    - "Nicholas"
-    - "Edward"
-    - "Richard"
-    - "Neil"
