--- a/data/last-name.yml
+++ b/data/last-name.yml
@@ -1,14 +1,5 @@
 ---
 last-name:
-    - "Redfern"
-    - "Joyce"
-    - "Baker"
-    - "Uppal"
-    - "Singh"
-    - "Wylie"
-    - "McCombe"
-    - "Pinson"
-    - "Turner"
-    - "Gordon"
-    - "Cobley"
-    - "Larkin"
+    - "Thomas"
+    - "Ison"
+    - "Wallace"
