Tidied header, add skip link and flag token idea.

--- a/data/company.yml
+++ b/data/company.yml
@@ -1,6 +1,7 @@
 ---
 company:
     name: "OHSL"
+    long-name: "Occupational Hygiene Solutions Limited"
     vat-number: "GB 987595633"
     company-number: "07070447"
     address: "2 Hayes Road, Nuneaton, Warwickshire. CV10 0NH."
